force-app/main/default/objects/Agent_Audit_Report__c/Agent_Audit_Report__c.object-meta.xml
<CustomObject>
    <label>Agent Audit Report</label>
    <pluralLabel>Agent Audit Reports</pluralLabel>
    <nameField>
        <displayFormat>AUDIT-{00000}</displayFormat>
        <label>Audit Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>