force-app/main/default/objects/Agent_Audit_Report__c/fields/Agents_Discovered__c.field-meta.xml
<CustomField>
    <fullName>Agents_Discovered__c</fullName>
    <label>Agents Discovered</label>
    <type>Number</type>
    <precision>6</precision>
    <scale>0</scale>
</CustomField>