force-app/main/default/objects/Agent_Audit_Report__c/fields/Async_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>Async_Job_Id__c</fullName>
    <label>Async Job Id</label>
    <type>Text</type>
    <length>18</length>
</CustomField>