force-app/main/default/objects/Agent_Audit_Report__c/fields/Coverage_Status__c.field-meta.xml
<CustomField><fullName>Coverage_Status__c</fullName><label>Audit Coverage</label><type>Text</type><length>20</length><required>false</required></CustomField>