force-app/main/default/objects/Agent_Audit_Report__c/fields/Discovery_Errors__c.field-meta.xml
<CustomField>
    <fullName>Discovery_Errors__c</fullName>
    <label>Discovery Errors</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>