force-app/main/default/objects/Agent_Audit_Report__c/fields/Discovery_Graph_Json__c.field-meta.xml
<CustomField>
    <fullName>Discovery_Graph_Json__c</fullName>
    <label>Discovery Graph Json</label>
    <type>LongTextArea</type>
    <length>131072</length>
</CustomField>