force-app/main/default/objects/Agent_Audit_Report__c/fields/Efficiency_Grade__c.field-meta.xml
<CustomField>
    <fullName>Efficiency_Grade__c</fullName>
    <label>Efficiency Grade</label>
    <type>Text</type>
    <length>2</length>
</CustomField>