force-app/main/default/objects/Agent_Audit_Report__c/fields/Efficiency_Score__c.field-meta.xml
<CustomField>
    <fullName>Efficiency_Score__c</fullName>
    <label>Efficiency Score</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>