force-app/main/default/objects/Agent_Audit_Report__c/fields/Findings_Count__c.field-meta.xml
<CustomField>
    <fullName>Findings_Count__c</fullName>
    <label>Findings Count</label>
    <type>Summary</type>
    <summaryForeignKey>Finding__c.Agent_Audit_Report__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
</CustomField>