force-app/main/default/objects/Agent_Audit_Report__c/fields/Impact_Snapshot__c.field-meta.xml
<CustomField><fullName>Impact_Snapshot__c</fullName><label>Modeled Impact Snapshot</label><type>LongTextArea</type><length>131072</length><visibleLines>3</visibleLines></CustomField>