force-app/main/default/objects/Agent_Audit_Report__c/fields/Methodology_Version__c.field-meta.xml
<CustomField>
    <fullName>Methodology_Version__c</fullName>
    <label>Methodology Version</label>
    <type>Text</type>
    <length>20</length>
</CustomField>