force-app/main/default/objects/Agent_Audit_Report__c/fields/Modeled_Energy_Wh__c.field-meta.xml
<CustomField><fullName>Modeled_Energy_Wh__c</fullName><label>Modeled Instruction Energy</label><type>Number</type><precision>18</precision><scale>4</scale><required>false</required></CustomField>