force-app/main/default/objects/Agent_Audit_Report__c/fields/Modeled_Savings_Wh_Low__c.field-meta.xml
<CustomField><fullName>Modeled_Savings_Wh_Low__c</fullName><label>Modeled Instruction Savings Low</label><type>Number</type><precision>18</precision><scale>4</scale><required>false</required></CustomField>