force-app/main/default/objects/Agent_Audit_Report__c/fields/Org_Id__c.field-meta.xml
<CustomField>
    <fullName>Org_Id__c</fullName>
    <label>Org Id</label>
    <type>Text</type>
    <length>18</length>
</CustomField>