force-app/main/default/objects/Agent_Audit_Report__c/fields/Prompt_Templates_Discovered__c.field-meta.xml
<CustomField>
    <fullName>Prompt_Templates_Discovered__c</fullName>
    <label>Prompt Templates Discovered</label>
    <type>Number</type>
    <precision>6</precision>
    <scale>0</scale>
</CustomField>