force-app/main/default/objects/Agent_Audit_Report__c/fields/Review_Result__c.field-meta.xml
<CustomField>
    <fullName>Review_Result__c</fullName>
    <description>Versioned Salesforce prompt-template review, deterministic category ratings, source evidence and recommendations. Stored atomically with the completed audit.</description>
    <label>Environmental Review Result</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>