force-app/main/default/objects/Agent_Audit_Report__c/fields/Review_Summary__c.field-meta.xml
<CustomField>
    <fullName>Review_Summary__c</fullName>
    <description>Compact projection of the validated environmental review for Fleet category ratings.</description>
    <label>Environmental Review Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>