force-app/main/default/objects/Agent_Audit_Report__c/fields/Run_Stage_Message__c.field-meta.xml
<CustomField>
    <fullName>Run_Stage_Message__c</fullName>
    <label>Run Stage Message</label>
    <type>Text</type>
    <length>255</length>
</CustomField>