force-app/main/default/objects/Agent_Audit_Report__c/fields/Run_Status__c.field-meta.xml
<CustomField>
    <fullName>Run_Status__c</fullName>
    <label>Run Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Queued</fullName><default>true</default><label>Queued</label></value>
            <value><fullName>Discovering</fullName><default>false</default><label>Discovering</label></value>
            <value><fullName>Analyzing</fullName><default>false</default><label>Analyzing</label></value>
            <value><fullName>Complete</fullName><default>false</default><label>Complete</label></value>
            <value><fullName>Failed</fullName><default>false</default><label>Failed</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>