force-app/main/default/objects/Agent_Audit_Report__c/fields/Run_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Run_Timestamp__c</fullName>
    <label>Run Timestamp</label>
    <type>DateTime</type>
</CustomField>