force-app/main/default/objects/Agent_Audit_Report__c/fields/Source_Retrieval_Context__c.field-meta.xml
<CustomField>
    <fullName>Source_Retrieval_Context__c</fullName>
    <label>Source Retrieval Context</label>
    <type>LongTextArea</type>
    <length>131072</length>
</CustomField>