force-app/main/default/objects/Agent_Audit_Report__c/fields/Target_Planner_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>Target_Planner_Api_Name__c</fullName>
    <label>Target Planner Api Name</label>
    <type>Text</type>
    <length>255</length>
</CustomField>