force-app/main/default/objects/Agent_Audit_Report__c/fields/Target_Planner_Id__c.field-meta.xml
<CustomField>
    <fullName>Target_Planner_Id__c</fullName>
    <label>Target Planner Id</label>
    <type>Text</type>
    <length>18</length>
</CustomField>