force-app/main/default/objects/Agent_Audit_Report__c/fields/Target_Type__c.field-meta.xml
<CustomField>
    <fullName>Target_Type__c</fullName>
    <label>Target Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Fleet</fullName><default>true</default><label>Fleet</label></value>
            <value><fullName>Process</fullName><default>false</default><label>Process</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>