force-app/main/default/objects/Agent_Audit_Report__c/fields/Topics_Discovered__c.field-meta.xml
<CustomField>
    <fullName>Topics_Discovered__c</fullName>
    <label>Topics Discovered</label>
    <type>Number</type>
    <precision>6</precision>
    <scale>0</scale>
</CustomField>