force-app/main/default/objects/Agent_Audit_Report__c/fields/Total_Annual_CO2e_g__c.field-meta.xml
<CustomField>
    <fullName>Total_Annual_CO2e_g__c</fullName>
    <label>Total Annual CO2e g</label>
    <type>Summary</type>
    <summaryForeignKey>Finding__c.Agent_Audit_Report__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <summarizedField>Finding__c.Annual_CO2e_g_Central__c</summarizedField>
</CustomField>