force-app/main/default/objects/Agent_Audit_Report__c/fields/Total_Annual_Energy_Wh__c.field-meta.xml
<CustomField>
    <fullName>Total_Annual_Energy_Wh__c</fullName>
    <label>Total Annual Energy Wh</label>
    <type>Summary</type>
    <summaryForeignKey>Finding__c.Agent_Audit_Report__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <summarizedField>Finding__c.Annual_Energy_Wh_Central__c</summarizedField>
</CustomField>