force-app/main/default/objects/Agent_Audit_Report__c/fields/Total_Annual_Water_mL__c.field-meta.xml
<CustomField>
    <fullName>Total_Annual_Water_mL__c</fullName>
    <label>Total Annual Water mL</label>
    <type>Summary</type>
    <summaryForeignKey>Finding__c.Agent_Audit_Report__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <summarizedField>Finding__c.Annual_Water_mL_Central__c</summarizedField>
</CustomField>